deploymentconfig.yaml
kind: DeploymentConfig
apiVersion: v1
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  template: 
    metadata:
      labels:
        name: mysql
    spec:
      containers:
        - name: mysql
          image: mysql
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-data
          ports:
            - containerPort: 3306 
              protocol: TCP
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-data-pvc
      imagePullSecrets:
        - name: docker-registry
  replicas: 1
  triggers:
    - type: ConfigChange 
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - mysql
        from:
          kind: ImageStreamTag
          name: mysql:5.7
  strategy: 
    type: Rolling
  paused: false 
  revisionHistoryLimit: 2 
  minReadySeconds: 0
