service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mysql-svc
  labels:
    name: mysql-svc
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    name: mysql
